# aws-base

./: .gitignore  .pre-commit-config.yaml  API_GATEWAY_STANDARDIZATION_PLAN.md  CHANGELOG.md  EXECUTIVE-SUMMARY.md  Makefile  PR_API_GATEWAY_STANDARDIZATION.md  README.md  REDEPLOY_INSTRUCTIONS.md  pyproject.toml  pyrightconfig.json
.claude/: README.md  ignore
.claude/commands/: add-service.md  bootstrap-infrastructure.md  build-docker.md  deploy-dev.md  explain-architecture.md  explain-docker-multiarch.md  lint-and-test.md  review-costs.md  setup-github-actions.md  test-api.md  troubleshoot-api-gateway.md
.github/workflows/: deploy-apprunner.yaml  deploy-eks.yaml  deploy-lambda.yaml  terraform-deploy.yaml
.pre-commit-hooks/: typecheck-backend.sh
agsys/common/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  __init__.py  api_client.py  health.py  logging.py  models.py  pyproject.toml
backend/: Dockerfile.apprunner  Dockerfile.eks  Dockerfile.lambda
backend/api/: .env.example  Dockerfile.lambda  README.md  main.py  pyproject.toml  pytest.ini  test_main.py
backend/api/tests/: __init__.py  test_main.py
backend/apprunner/: .env.example  README.md  main.py  pyproject.toml
backend/runner/: .env.example  .gitignore  Dockerfile.apprunner  README.md  main.py  pyproject.toml  test_main.py
backend/runner/tests/: __init__.py  test_main.py
backend/s3vector/: main.py  pyproject.toml
backend/shared/: README.md  __init__.py  health.py  middleware.py  models.py  pyproject.toml  settings.py  tracing.py
backend/vector/: .env.example  Dockerfile.lambda  README.md  README_TESTS.md  main.py  pyproject.toml
backend/vector/tests/: __init__.py  test_main.py  test_s3vector.py
bootstrap/: apprunner.tf  codeartifact.tf  lambda.tf  main.tf  outputs.tf  s3-buckets.tf  s3vector.tf  terraform.tfvars.example  variables.tf
docs/: ADDING-SERVICES.md  API-ENDPOINTS.md  API-KEYS-QUICKSTART.md  API_GATEWAY_IMPLEMENTATION_STATUS.md  API_GATEWAY_REFACTORING_PLAN.md  AWS-SERVICES-INTEGRATION.md  BEDROCK-AGENTCORE-MIGRATION-PLAN.md  CODEARTIFACT-PLAN.md  CREATE-SERVICE-QUICKSTART.md  DOCKER-ARCHITECTURE.md  DOCKER-ARM64-GUARANTEE.md  DOCKER-MULTIARCH.md  DOCKER.md  GITHUB-ACTIONS.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  INCREMENTAL-ADOPTION.md  INFRASTRUCTURE-REQUIREMENTS-SHARED.md  INSTALLATION.md  MONITORING.md  MULTI-SERVICE-ARCHITECTURE.md  MULTI-SERVICE-TESTING-GUIDE.md  MULTI_APPRUNNER_PLAN.md  MULTI_SERVICE_TESTING_GUIDE.md  PER-SERVICE-API-KEYS.md  PRE-COMMIT.md  README.md  RELEASE-PLEASE.md  S3-VECTOR-STORAGE.md  SCRIPTS.md  SCRIPT_UPDATE_GUIDE.md  SERVICE-CONFIGURATION.md  SHARED-LIBRARY.md  TAGGING-STRATEGY.md  TERRAFORM-BOOTSTRAP.md  TROUBLESHOOTING-API-GATEWAY.md  TROUBLESHOOTING-DOCKER-DEPENDENCIES.md  TROUBLESHOOTING.md  VSCODE-SETUP.md
k8s/: README.md
scripts/: add-embeddings.sh  add-integration.sh  build-common-library.sh  bump-common-version.sh  configure-codeartifact.sh  create-apprunner-service.sh  create-lambda-service.sh  docker-push.sh  get-service-urls.sh  new-create-apprunner-service.sh  new-create-lambda-service.sh  publish-common-library.sh  restore-terraform-state.sh  rollback-service.sh  setup-terraform-apprunner.sh  setup-terraform-base.sh  setup-terraform-lambda.sh  test-api.sh  test-apprunner.sh  test-dockerfiles.sh  test-health.sh  test-lambda.sh
terraform/: README.md  api-gateway.tf  lambda.tf  outputs.tf  s3-vectors-example.tf.example  s3-vectors.tf  s3-vectors.tf.example  variables.tf
terraform/environments/: dev.tfvars  local.tfvars
terraform/modules/api-gateway-apprunner/: main.tf  outputs.tf  variables.tf
terraform/modules/api-gateway-apprunner-integration/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/api-gateway-lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/api-gateway-lambda-integration/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/api-gateway-shared/: README.md  api-keys.tf  main.tf  outputs.tf  variables.tf
typings/opentelemetry/_logs/: __init__.pyi
typings/opentelemetry/_logs/_internal/: __init__.pyi
typings/opentelemetry/_logs/severity/: __init__.pyi
typings/opentelemetry/attributes/: __init__.pyi
typings/opentelemetry/context/: __init__.pyi  context.pyi
typings/opentelemetry/instrumentation/: _semconv.pyi  dependencies.pyi  instrumentor.pyi  utils.pyi
typings/opentelemetry/instrumentation/asgi/: __init__.pyi
typings/opentelemetry/instrumentation/fastapi/: __init__.pyi
typings/opentelemetry/instrumentation/httpx/: __init__.pyi
typings/opentelemetry/metrics/_internal/: __init__.pyi  instrument.pyi  observation.pyi
typings/opentelemetry/propagate/: __init__.pyi
typings/opentelemetry/propagators/: composite.pyi
typings/opentelemetry/proto/common/v1/: common_pb2.pyi
typings/opentelemetry/proto/metrics/v1/: metrics_pb2.pyi
typings/opentelemetry/proto/resource/v1/: resource_pb2.pyi
typings/opentelemetry/proto/trace/v1/: trace_pb2.pyi
typings/opentelemetry/sdk/_logs/: __init__.pyi
typings/opentelemetry/sdk/_logs/_internal/: __init__.pyi
typings/opentelemetry/sdk/_logs/export/: __init__.pyi
typings/opentelemetry/sdk/_shared_internal/: __init__.pyi
typings/opentelemetry/sdk/environment_variables/: __init__.pyi
typings/opentelemetry/sdk/metrics/: __init__.pyi
typings/opentelemetry/sdk/metrics/_internal/: __init__.pyi  _view_instrument_match.pyi  aggregation.pyi  exceptions.pyi  instrument.pyi  measurement.pyi  measurement_consumer.pyi  metric_reader_storage.pyi  view.pyi  (+2 more)
typings/opentelemetry/sdk/resources/: __init__.pyi
typings/opentelemetry/sdk/trace/: __init__.pyi  sampling.pyi
typings/opentelemetry/sdk/util/: __init__.pyi  instrumentation.pyi
typings/opentelemetry/semconv/: schemas.pyi
typings/opentelemetry/semconv/metrics/: __init__.pyi
typings/opentelemetry/semconv/resource/: __init__.pyi
typings/opentelemetry/semconv/trace/: __init__.pyi
typings/opentelemetry/trace/: __init__.pyi  span.pyi
typings/opentelemetry/util/: _decorator.pyi  _importlib_metadata.pyi  re.pyi  types.pyi
typings/opentelemetry/util/http/: __init__.pyi
(+28 files in other folders)
