[project]
name = "vector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agsys-common>=0.0.1,<1.0.0",
    "boto3>=1.42.9",
    "fastapi[standard]>=0.124.4",
    "httpx>=0.27.2",
    "mangum>=0.19.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
